--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
 
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700|Droid+Serif:400,700,400italic,700italic&display=swap' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700,900" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Bahianita|New+Rocker|OswaldRoboto:300,400,700&display=swap" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="css/agency.min.css" rel="stylesheet">
@@ -30,24 +29,24 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="/img/logo.png" alt="logo"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav text-uppercase ml-auto">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+            <a class="nav-link js-scroll-trigger" href="#about">about</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+            <a class="nav-link js-scroll-trigger" href="#music">music</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#gigs">gigs</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#team">Team</a>
+            <a class="nav-link js-scroll-trigger" href="#pics">pics</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -59,22 +58,30 @@
 
   <!-- Header -->
   <header class="masthead">
+    <div class="vid-overlay"></div>
+      <div id="video-background" class="vid-bg">
+        <video autoplay="true" style="width: 100%;" loop muted plays-inline>
+          <source
+            src="/vid/hp-bg.mp4"
+            type="video/mp4">
+        </video>
+      </div>
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Welcome To Our Studio!</div>
-        <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+        <div class="intro-heading text-uppercase">HEAVY NASTY METAL</div>
+        <div class="intro-lead-in">Dallas, Tx</div>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">COME INSIDE</a>
       </div>
     </div>
   </header>
 
   <!-- Services -->
-  <section class="page-section" id="services">
+  <section class="page-section" id="about">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Services</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h2 class="section-heading text-uppercase">about</h2>
+          <h3 class="section-subheading text-muted">A brief history of the band.</h3>
         </div>
       </div>
       <div class="row text-center">
@@ -107,7 +114,7 @@
   </section>
 
   <!-- Portfolio Grid -->
-  <section class="bg-light page-section" id="portfolio">
+  <section class="bg-light page-section" id="music">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -205,7 +212,7 @@
   </section>
 
   <!-- About -->
-  <section class="page-section" id="about">
+  <section class="page-section" id="gigs">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -286,7 +293,7 @@
   </section>
 
   <!-- Team -->
-  <section class="bg-light page-section" id="team">
+  <section class="bg-light page-section" id="pics">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
