updated home page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link href="https://fonts.googleapis.com/css?family=Bahianita|New+Rocker|OswaldRoboto:300,400,700&display=swap" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/agency.min.css" rel="stylesheet">
+  <link href="css/crankfish.min.css" rel="stylesheet">
 
 </head>
 
