tweaked out button secondary

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="intro-text">
         <div class="intro-heading text-uppercase">HEAVY NASTY METAL</div>
         <div class="intro-lead-in">Dallas, Tx</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">COME INSIDE</a>
+        <a class="btn btn-secondary btn-xl text-uppercase js-scroll-trigger" href="#services">COME INSIDE</a>
       </div>
     </div>
   </header>
