created music player

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Agency - Start Bootstrap Theme</title>
+  <title>Crankfish Official Website</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -68,8 +68,8 @@
       </div>
     <div class="container">
       <div class="intro-text">
-        <div class="intro-heading text-uppercase">HEAVY NASTY METAL</div>
         <div class="intro-lead-in">Dallas, Tx</div>
+        <div class="intro-heading text-uppercase">HEAVY NASTY METAL</div>
         <a class="btn btn-secondary btn-xl text-uppercase js-scroll-trigger" href="#services">COME INSIDE</a>
       </div>
     </div>
