--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               <h1 class="primary-title">TEXAS HEAVY METAL</h1>
               <h2 class="subtitle-text">Dallas • Fort Worth</h2>
               <div class="voffset20"></div>
-              <a href="#" class="btn btn-invert">Come Inside</a>
+              <a href="#News" class="btn btn-invert">Come Inside</a>
             </div>
             <div class="item">
               <h2 class="primary-title">
