edit on quoted heath

--- a/index.html
+++ b/index.html
@@ -462,9 +462,7 @@
           <div class="col-lg-6">
             <div class="voffset50"></div>
             <div class="quote">
-              <p>"We aren't like the rest. We've never the description. We never wanted to. 
-                And we really don't care! This isn't about fitting in or being accepted. 
-                This is about our lives, our friends and our family."</p>
+              <p>"Live life like there is no tomorrow. Make music and make it loud."</p>
               <p class="author">Heath Shults</p>
             </div>
             <div class="description">
